--- a/notebooks/tutorial_spectra_healpix_spin0and2.ipynb
+++ b/notebooks/tutorial_spectra_healpix_spin0and2.ipynb
@@ -16,7 +16,7 @@
     "pixellisation to pass through the different steps of generation. If you are interested on doing the\n",
     "same thing with `CAR` pixellisation, you can have a look at this [file](tutorial_spectra_car_spin0and2.ipynb).\n",
     "\n",
-    "The `HEALPIX` survey mask is defined will be a disk of radius 25 degree centered on longitude 30 degree and latitude 50 degree, It will have a resolution nside=1024.\n",
+    "The `HEALPIX` survey mask will be a disk of radius 25 degree centered on longitude 30 degree and latitude 50 degree, It will have a resolution nside=1024.\n",
     "\n",
     "We simulate 2 splits with 5 µK.arcmin noise and we also include a point source mask with 100 holes of size 10\n",
     "arcminutes. We appodize the survey mask with an apodisation of 1 degree and the point source mask\n",
